--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "typescript-eslint": "^8.36.0"
     },
     "dependencies": {
+        "@flamework/core": "^1.3.1",
         "@rbxts/character-promise": "^1.0.2",
         "@rbxts/charm": "^0.10.0",
         "@rbxts/charm-sync": "^0.3.0",
@@ -41,7 +42,9 @@
         "@rbxts/t": "^3.2.1",
         "@rbxts/validate-tree": "^2.0.2",
         "@rbxts/vide": "^0.5.7",
-        "concurrently": "^9.2.0"
+        "concurrently": "^9.2.0",
+        "flamework": "^4.2.1",
+        "rbxts-transformer-flamework": "^1.3.1"
     },
     "overrides": {
         "glob": "^9.3.5"
