--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,14 @@
         "strict": true,
         "noLib": true,
         "typeRoots": [
-            "node_modules/@rbxts"
+            "node_modules/@rbxts",
+            "node_modules/@flamework"
         ],
+        "plugins": [
+            {
+                "transform": "rbxts-transformer-flamework",
+                "obfuscation": true
+            }
+        ]
     }
 }
