--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "command": "bash",
             "args": [
                 "./scripts/shell/dev.sh",
-                "lobby"
+                "lobby",
+                "true"
             ],
             "group": "build",
             "presentation": {
@@ -21,6 +22,6 @@
             "problemMatcher": [
                 "$tsc"
             ]
-        },
+        }
     ]
 }
