--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,44 @@
+# ─────────────────────────────
+# 💥 Ignore build artifacts
+# ─────────────────────────────
+
+# rbxtsc output
+dist/
+flamework.build
+
+# TypeScript build info
+*.tsbuildinfo
+
+# .rbxlx generated from Rojo
+**/*.rbxlx
+
+# node_modules anywhere
+node_modules/
+
+# ─────────────────────────────
+# ⚙️ VSCode / Editor stuff
+# ─────────────────────────────
+
+.vscode/
+*.code-workspace
+
+# ─────────────────────────────
+# 📁 NPM / Logs / OS files
+# ─────────────────────────────
+
 package-lock.json
-node_modules
-dist
+npm-debug.log*
+yarn.lock
+
+# macOS / Linux / Windows trash
+.DS_Store
+Thumbs.db
+
+# ─────────────────────────────
+# ✅ Explicitly allow sources
+# ─────────────────────────────
+
+!sources/**
+
+# Prevent empty folders
+scripts/**/node_modules/
