--- a/lobby.project.json
+++ b/lobby.project.json
@@ -5,7 +5,8 @@
     "$className": "DataModel",
     "ReplicatedStorage": {
       "rbxts_include": {
-        "$path": "../dist/include",
+        "$className": "Folder",
+        "$path": "dist/include",
         "node_modules": {
           "$className": "Folder",
           "@rbxts": {
@@ -22,43 +23,39 @@
       "base": {
         "$className": "Folder",
         "client": {
-          "$path": "../dist/out/base/client",
-          "controllers": {
-            "$path": "../dist/out/base/client/controllers"
-          }
+          "$className": "Folder",
+          "$path": "dist/out/base/client"
         },
         "shared": {
-          "$path": "../dist/out/base/shared"
+          "$className": "Folder",
+          "$path": "dist/out/base/shared"
         }
       },
       "lobby": {
         "$className": "Folder",
         "client": {
-          "$path": "../dist/out/lobby/client",
-          "controllers": {
-            "$path": "../dist/out/lobby/client/controllers"
-          }
+          "$className": "Folder",
+          "$path": "dist/out/lobby/client"
         },
         "shared": {
-          "$path": "../dist/out/lobby/shared"
+          "$className": "Folder",
+          "$path": "dist/out/lobby/shared"
         }
       }
     },
     "ServerScriptService": {
       "base": {
+        "$className": "Folder",
         "server": {
-          "$path": "../dist/out/base/server",
-          "services": {
-            "$path": "../dist/out/base/server/services"
-          }
+          "$className": "Folder",
+          "$path": "dist/out/base/server"
         }
       },
       "lobby": {
+        "$className": "Folder",
         "server": {
-          "$path": "../dist/out/lobby/server",
-          "services": {
-            "$path": "../dist/out/lobby/server/services"
-          }
+          "$className": "Folder",
+          "$path": "dist/out/lobby/server"
         }
       }
     }
