refreshed repo to new .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,13 @@ yarn.lock
 Thumbs.db
 
 # ─────────────────────────────
+# 🔧 Ignore all rojo trees files except root tsconfig.json
+# ─────────────────────────────
+
+# Ignore all tsconfig files in the root that match *.tsconfig.json
+/*.project.json
+
+# ─────────────────────────────
 # 🔧 Ignore all tsconfig files except root tsconfig.json
 # ─────────────────────────────
 
